# restorecoins

./: .gitignore  BACKLOG.md  DECISIONS.md  LICENSE  PROJECT_SPEC.md  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml  deploy-backend.yml  deploy-frontend.yml
backend/: Dockerfile  README.md  app.py  mask_proposer.py  pipeline.py  provenance.py  requirements-real.txt  requirements.txt  schemas.py
docs/: curator-letter.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: ExportModal.tsx  HypothesisOverlay.tsx  MaskCanvas.tsx
frontend/src/pages/: AboutPage.tsx  MaskPage.tsx  ResultsPage.tsx  UploadPage.tsx
frontend/src/state/: session.ts
frontend/src/types/: api.ts
scripts/: deploy_hf.py
training/: datasets.py  evaluate.py  fixtures.py  requirements.txt  scrape_ocre.py  scrape_wikimedia.py  synthetic_weathering.py  train_lora.py  train_mask_proposer.py
training/tests/: test_synthetic_weathering.py
